--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
   "dependencies": {
     "@angular/common": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@capacitor/app": "1.0.7",
+    "@capacitor/camera": "^1.2.2",
     "@capacitor/core": "3.3.3",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
+    "firebase": "^9.4.0",
+    "ngx-logger": "^5.0.4",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
+    "swiper": "^7.4.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
