--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@capacitor/android": "3.3.3",
     "@capacitor/app": "1.0.7",
     "@capacitor/camera": "^1.2.2",
     "@capacitor/clipboard": "^1.0.6",
     "@capacitor/core": "3.3.3",
     "@capacitor/haptics": "1.1.3",
+    "@capacitor/ios": "3.3.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/share": "^1.0.7",
     "@capacitor/status-bar": "1.0.6",
